--- a/portfolio.html
+++ b/portfolio.html
@@ -85,9 +85,10 @@
 
     <main>
       <section class="projects">
-        <div class="container">
+        <div class="container projects-container">
           <!--Скрытый заголовок-->
           <h1 class="visually__hidden">Проекты</h1>
+
           <ul class="filters">
             <li class="filters__body">
               <button type="button" class="filters__button">Все</button>
